# TDMVP

./: .gitignore  README.md  build.gradle  gradlew  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tdyh/android/tdmvp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tdyh/android/tdmvp/: MyApp.java
app/src/main/java/com/tdyh/android/tdmvp/apiservice/: Api.java  CommonService.java  MovieService.java
app/src/main/java/com/tdyh/android/tdmvp/bean/: A20011222.java  MovieEntity.java  UserInfo.java
app/src/main/java/com/tdyh/android/tdmvp/contract/: MainContract.java
app/src/main/java/com/tdyh/android/tdmvp/model/: DataCallback.java  IUserModel.java  LogModel.java  MainModel.java
app/src/main/java/com/tdyh/android/tdmvp/presenter/: BaseCommonPresenter.java  MainPresenter.java
app/src/main/java/com/tdyh/android/tdmvp/tasks/: LoginCase.java
app/src/main/java/com/tdyh/android/tdmvp/utils/: HttpUtls.java  JNIUtils.java  ParameterizedTypeImpl.java
app/src/main/java/com/tdyh/android/tdmvp/view/: MainActivity.java
app/src/main/jni/: com_tdyh_android_tdmvp_utils_JNIUtils.h  sign.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tdyh/android/tdmvp/: ExampleUnitTest.java
commonlib/: CMakeLists.txt  build.gradle
commonlib/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mvplib/: build.gradle
mvplib/src/main/: AndroidManifest.xml
tdhttp/: build.gradle
tdhttp/src/main/: AndroidManifest.xml
(+143 files in other folders)
